# Laser_Simulation

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  LaserSim_GUI.py  README.md  YbCaF2_300K_cross_sections.txt  amplifier.py  crystal.py  project_data.json  pump.py  pyproject.toml  requirements.txt  seed.py  seed_CPA.py  setup.py  spectral_losses.py  tutorial.ipynb  utilities.py
LaserSim/: amplifier.py  crystal.py  pump.py  seed.py  seed_CPA.py  spectral_losses.py  utilities.py
LaserSim_GUI/: .gitignore  LaserSim_GUI.py  README.md  project_data.json
Simulation_scripts/A2_CaF2/: 240626_FP15_Q-Switch_TFP_Gain100A.txt  240719_Q-Switch_CaF2_TFP_Gain100A.txt  250305_ylim_0.05_Gain_wavelength_diode.txt  250305_ylim_0.1_Gain_wavelength_diode.txt  250305_ylim_0.2_Gain_wavelength_diode.txt  250305_ylim_0.9999_Gain_wavelength_diode.txt  250305_ylim_0_Gain_wavelength_diode.txt  250312_Q-Switch_CaF2_TFP_Gain100A.txt  A2_CaF2_TSF.py  YbCaF2_Toepfer_300K_beta_0.3_small_signal_gain.txt
examples/: 01_load_crystal.py  02_load_seed.py  03-1_temporal_amplification.py  03-2_spectral_amplification.py  03-3_inversion_test.py  04_Comparison_CW_CPA_amplification.py  05_spectral_edge_steepening.py
material_database/CrZnS_Mirov/: CrZnS_Mirov_300Ka.csv  CrZnS_Mirov_300Kf.csv  basedata.json
material_database/CrZnS_Sorokin/: CrZnS_Sorokin_300Ka.csv
material_database/CrZnSe/: CrZnSe_Mirov_300Kf.csv  basedata.json
material_database/CrZnSe_Sorokin/: CrZnSe_Sorokin_300Ka.csv
material_database/NdYAG/: basedata.json
material_database/YbCaF2/: CaF100Ka.txt  CaF100Kf.txt  CaF120Ka.txt  (+11 more)
(+124 files in other folders)
