[tool.poetry]
name = "LaserSim"
version = "1.1.0"
description = "Lasersimulation"
authors = ["Marin Beyer <m.beyer@uni-jena.de"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "LaserSim"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.24.2"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

